<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundColor"
    android:clipToPadding="false"
    tools:context=".features.settings_screen.ui.view.TobaccoFragment">

    <TextView
        android:id="@+id/tvThemesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/themes_name"
        android:textColor="?attr/itemColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvThemesTitle">

        <RadioButton
            android:id="@+id/themeSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_theme"
            android:textColor="?attr/itemColor" />

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textColor="?attr/itemColor" />

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="?attr/itemColor" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>